GNOME Bugzilla – Bug 753680
Wacom tablet mapping wrong at login
Last modified: 2015-11-03 12:04:10 UTC
We have a Wacom tablet Intuos 5 set on a dual-screen computer. It is mapped to a single monitor, with "Keep aspect ratio". The tablet stays always plugged, even during startup. At every startup, it would still be mapped to the same single monitor but with about only half (horizontally) of the tablet mapped to the whole screen (so definitely the wrong ratio by half!). The vertical area is fully mapped. It looks like it would have tried first to map to both displays while still keeping the ratio (which makes the letterbox only map half the active area horizontally!), then realizing it must map to a single monitor and use the same area on this monitor. Well that's just an assumption based on the strange fact it drops half of the active area. The problem may be elsewhere. The workaround is to open the Wacom tablet settings and play with "Map to Monitor" settings (for instance "keep ratio" on and off) to force a remapping and make it right again. But that's very annoying.
Created attachment 314679 [details] [review] wacom: Ensure to reapply keep-aspect after monitor mapping changes Otherwise the mapping may come out wrong if during the initialization paths it first applies keep-aspect, and later maps to a single monitor.
Review of attachment 314679 [details] [review]: Looks fine otherwise. ::: plugins/wacom/gsd-wacom-manager.c @@ +1582,3 @@ + + if (gnome_settings_is_wayland ()) + return; Indentation.
Thanks, pushed with the indentation fix, and an extra check for pad devices. Attachment 314679 [details] pushed as 963cea9 - wacom: Ensure to reapply keep-aspect after monitor mapping changes