wacom: Ensure to reapply keep-aspect after monitor mapping changes

Otherwise the mapping may come out wrong if during the initialization
paths it first applies keep-aspect, and later maps to a single monitor.

https://bugzilla.gnome.org/show_bug.cgi?id=753680